# google-cert-capstone

./: README.md  main.ipynb  model3.pkl  pyproject.toml
